force-app/main/default/objects/Legacy_Donation_Opportunity_Mapping__mdt/Legacy_Donation_Opportunity_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>This metadata used to map the mandatory values for legacy Donation Opportunities created from the Alumni Registration form.</description>
    <label>Legacy Donation Opportunity Mapping</label>
    <pluralLabel>Legacy Donation Opportunity Mappings</pluralLabel>
</CustomObject>