force-app/main/default/objects/Legacy_Donation_Opportunity_Mapping__mdt/fields/Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Amount__c</fullName>
    <description>Field to hold default Opportunity Amount value to map Legacy Donation Opportunity Amount</description>
    <inlineHelpText>Please enter the Amount value needs to be mapped</inlineHelpText>
    <label>Opportunity Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>