force-app/main/default/objects/Legacy_Donation_Opportunity_Mapping__mdt/fields/Opportunity_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Close_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Field to hold default Opportunity Close Date value to map Legacy Donation Opportunity Close Date</description>
    <inlineHelpText>Please choose the Close Date for the Legacy Donation Opportunity</inlineHelpText>
    <label>Opportunity Close Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>