force-app/main/default/objects/Legacy_Donation_Opportunity_Mapping__mdt/fields/Opportunity_Currency__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Currency__c</fullName>
    <description>Field to hold default Opportunity currency value to map Legacy Donation Opportunity currency</description>
    <inlineHelpText>Please provide a valid Currency Iso Code</inlineHelpText>
    <label>Opportunity Currency</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>