force-app/main/default/objects/Legacy_Donation_Opportunity_Mapping__mdt/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <description>Field to hold default Opportunity Stage value to map Legacy Donation Opportunity Stage</description>
    <inlineHelpText>Please provide a valid Opportunity Stage value</inlineHelpText>
    <label>Opportunity Stage</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>